{
  "version": 4,
  "terraform_version": "1.0.9",
  "serial": 17,
  "lineage": "62610eb4-fdfb-c179-18c1-2a4aa52472c1",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d96b9f4cb0e26b96",
            "domain": "vpc",
            "id": "eipalloc-0d96b9f4cb0e26b96",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-147-69-100.compute-1.amazonaws.com",
            "public_ip": "54.147.69.100",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "EKS",
              "Name": "Capstone_Project-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "EKS",
              "Name": "Capstone_Project-us-east-1a",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:671790413030:internet-gateway/igw-0d2513b527cac3095",
            "id": "igw-0d2513b527cac3095",
            "owner_id": "671790413030",
            "tags": {
              "Environment": "EKS",
              "Name": "Capstone_Project",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "EKS",
              "Name": "Capstone_Project",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0873f41a8a7e26077"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d96b9f4cb0e26b96",
            "connectivity_type": "public",
            "id": "nat-0f5c3d3dca434fff7",
            "network_interface_id": "eni-0ee6d16f1701be9df",
            "private_ip": "10.0.3.13",
            "public_ip": "54.147.69.100",
            "subnet_id": "subnet-09c24363ecc0b812e",
            "tags": {
              "Environment": "EKS",
              "Name": "Capstone_Project-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "EKS",
              "Name": "Capstone_Project-us-east-1a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09543fa758004955c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f5c3d3dca434fff7",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09543fa758004955c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d2513b527cac3095",
            "id": "r-rtb-052d7ba9a82aee9e01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-052d7ba9a82aee9e0",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:671790413030:route-table/rtb-09543fa758004955c",
            "id": "rtb-09543fa758004955c",
            "owner_id": "671790413030",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "EKS",
              "Name": "Capstone_Project-private",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "EKS",
              "Name": "Capstone_Project-private",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0873f41a8a7e26077"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:671790413030:route-table/rtb-052d7ba9a82aee9e0",
            "id": "rtb-052d7ba9a82aee9e0",
            "owner_id": "671790413030",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "EKS",
              "Name": "Capstone_Project-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "EKS",
              "Name": "Capstone_Project-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0873f41a8a7e26077"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-005f157ed21b4fe6a",
            "route_table_id": "rtb-09543fa758004955c",
            "subnet_id": "subnet-03de802c2118845a2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ebca12744ee88cfa",
            "route_table_id": "rtb-09543fa758004955c",
            "subnet_id": "subnet-073948b49afac4310"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf2ea7e1867fd06e",
            "route_table_id": "rtb-052d7ba9a82aee9e0",
            "subnet_id": "subnet-09c24363ecc0b812e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05fa91d7420b73bc4",
            "route_table_id": "rtb-052d7ba9a82aee9e0",
            "subnet_id": "subnet-0a2b4d0147ef6c199"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:671790413030:subnet/subnet-03de802c2118845a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-03de802c2118845a2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "671790413030",
            "tags": {
              "Environment": "EKS",
              "Name": "Capstone_Project-private-us-east-1a",
              "Terraform": "true",
              "kubernetes.io/cluster/my-eks-201": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "EKS",
              "Name": "Capstone_Project-private-us-east-1a",
              "Terraform": "true",
              "kubernetes.io/cluster/my-eks-201": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0873f41a8a7e26077"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:671790413030:subnet/subnet-073948b49afac4310",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-073948b49afac4310",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "671790413030",
            "tags": {
              "Environment": "EKS",
              "Name": "Capstone_Project-private-us-east-1b",
              "Terraform": "true",
              "kubernetes.io/cluster/my-eks-201": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "EKS",
              "Name": "Capstone_Project-private-us-east-1b",
              "Terraform": "true",
              "kubernetes.io/cluster/my-eks-201": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0873f41a8a7e26077"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:671790413030:subnet/subnet-09c24363ecc0b812e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-09c24363ecc0b812e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "671790413030",
            "tags": {
              "Environment": "EKS",
              "Name": "Capstone_Project-public-us-east-1a",
              "Terraform": "true",
              "kubernetes.io/cluster/my-eks-201": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "EKS",
              "Name": "Capstone_Project-public-us-east-1a",
              "Terraform": "true",
              "kubernetes.io/cluster/my-eks-201": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0873f41a8a7e26077"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:671790413030:subnet/subnet-0a2b4d0147ef6c199",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0a2b4d0147ef6c199",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "671790413030",
            "tags": {
              "Environment": "EKS",
              "Name": "Capstone_Project-public-us-east-1b",
              "Terraform": "true",
              "kubernetes.io/cluster/my-eks-201": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "EKS",
              "Name": "Capstone_Project-public-us-east-1b",
              "Terraform": "true",
              "kubernetes.io/cluster/my-eks-201": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0873f41a8a7e26077"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:671790413030:vpc/vpc-0873f41a8a7e26077",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bdb6fefb27adfc81",
            "default_route_table_id": "rtb-0eb1211013ec24a35",
            "default_security_group_id": "sg-0ec85b9519559b1db",
            "dhcp_options_id": "dopt-51566b2b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0873f41a8a7e26077",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0eb1211013ec24a35",
            "owner_id": "671790413030",
            "tags": {
              "Environment": "EKS",
              "Name": "Capstone_Project",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "EKS",
              "Name": "Capstone_Project",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}